--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,11 +28,11 @@
         android:letterSpacing="0.025"
         android:text="K53 Network"
         android:textColor="@color/white"
-        android:textSize="28sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="40dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="70dp" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -42,6 +42,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:elevation="12dp"
+        app:cardBackgroundColor="@color/blue"
         app:cardCornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -62,7 +63,7 @@
                 android:iconifiedByDefault="false"
                 android:outlineSpotShadowColor="@color/darkBlue"
                 android:queryBackground="@android:color/transparent"
-                android:queryHint="Search Here"
+                android:queryHint="Search driving school or testing centre"
                 app:layout_constraintBottom_toBottomOf="parent"
 
                 app:layout_constraintEnd_toEndOf="parent"
@@ -96,6 +97,7 @@
             android:elevation="12dp"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -104,9 +106,9 @@
 
                 <ImageView
                     android:id="@+id/image_view1"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-
+                    android:layout_width="124dp"
+                    android:layout_height="90dp"
+                    android:src="@drawable/ic_drivingschool"
                     app:layout_constraintBottom_toTopOf="@+id/textView1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -118,7 +120,7 @@
                     android:layout_width="128dp"
                     android:layout_height="37dp"
                     android:gravity="center"
-                    android:text="Testing Centre"
+                    android:text="Driving school"
                     android:textAllCaps="true"
                     android:textColor="@color/blue"
                     android:textSize="14sp"
@@ -139,10 +141,12 @@
             android:layout_height="128dp"
             android:layout_margin="8dp"
             android:layout_marginStart="16dp"
+            android:background="@color/white"
             android:clickable="true"
             android:elevation="12dp"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -151,9 +155,9 @@
 
                 <ImageView
                     android:id="@+id/image_view20"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-
+                    android:layout_width="124dp"
+                    android:layout_height="91dp"
+                    android:src="@drawable/ic_testing"
                     app:layout_constraintBottom_toTopOf="@+id/textView20"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -162,17 +166,17 @@
 
                 <TextView
                     android:id="@+id/textView20"
-                    android:layout_width="126dp"
-                    android:layout_height="35dp"
+                    android:layout_width="127dp"
+                    android:layout_height="36dp"
                     android:gravity="center"
-                    android:text="Driving school"
+                    android:text="Testing Centre"
                     android:textAllCaps="true"
                     android:textColor="@color/blue"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/image_view20" />
 
@@ -200,10 +204,12 @@
             android:layout_height="126dp"
             android:layout_margin="8dp"
             android:layout_marginEnd="16dp"
+            android:background="@color/white"
             android:clickable="true"
             android:elevation="12dp"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -212,9 +218,9 @@
 
                 <ImageView
                     android:id="@+id/image_view21"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-
+                    android:layout_width="138dp"
+                    android:layout_height="86dp"
+                    android:src="@drawable/ic_book_online"
                     app:layout_constraintBottom_toTopOf="@+id/textView21"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -247,10 +253,12 @@
             android:layout_height="128dp"
             android:layout_margin="8dp"
             android:layout_marginStart="16dp"
+            android:background="@color/white"
             android:clickable="true"
             android:elevation="12dp"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -259,9 +267,9 @@
 
                 <ImageView
                     android:id="@+id/image_view22"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-
+                    android:layout_width="124dp"
+                    android:layout_height="74dp"
+                    android:src="@drawable/ic_requirement"
                     app:layout_constraintBottom_toTopOf="@+id/textView22"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -308,10 +316,12 @@
             android:layout_height="128dp"
             android:layout_margin="8dp"
             android:layout_marginEnd="16dp"
+            android:background="@color/white"
             android:clickable="true"
             android:elevation="12dp"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -320,9 +330,9 @@
 
                 <ImageView
                     android:id="@+id/image_view23"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-
+                    android:layout_width="125dp"
+                    android:layout_height="77dp"
+                    android:src="@drawable/ic_baseline_garage_24"
                     app:layout_constraintBottom_toTopOf="@+id/textView23"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -359,6 +369,7 @@
             android:elevation="12dp"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -367,9 +378,9 @@
 
                 <ImageView
                     android:id="@+id/image_view"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-
+                    android:layout_width="125dp"
+                    android:layout_height="82dp"
+                    android:src="@drawable/ic_download"
                     app:layout_constraintBottom_toTopOf="@+id/textView4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -407,11 +418,11 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="432dp"
+        android:layout_height="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
         app:layout_constraintVertical_bias="1.0"
