setting up login activity in main activity and move the content of main to new java file called home

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0394fc</color>
     <color name="darkBlue">#0a548a</color>
+    <color name="Black">#050505</color>
 </resources>
