setting up login activity in main activity and move the content of main to new java file called home: setup is successful

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,7 @@
         android:drawableStart="@drawable/ic_email"
         android:drawablePadding="16dp"
         android:ems="10"
+        android:textColor="@color/blue"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:padding="16dp"
@@ -79,6 +80,7 @@
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="16dp"
         android:ems="10"
+        android:textColor="@color/blue"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="16dp"
